--- a/style.css
+++ b/style.css
@@ -2,3 +2,39 @@
     --cor-de-fundo: #f5f3f3;
     --hashtag: #43dacd;
 }
+body {
+    background-color: var(--cor-de-fundo);
+}
+
+h1 {
+    color: var(--hashtag);
+}
+
+
+#texto {
+    color: yellow;
+}
+
+.contagem {
+    background-color: bisque;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.objetivos {
+    padding: 20px;
+    font-size: 18px;
+}
+
+.ativo {
+    background-color: black;
+    color: beige;
+}
+
+.aba-conteudo {
+    display: none;
+}
+
+.ativa {
+    display: block;
+}
